[package]
name = "tutrl"
version = "0.1.0"
authors = ["Stefano Montesi <dincio.montesi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.7.0"
specs = "0.16.1"
specs-derive = "0.4.1"
single = "1.0.0"
num = "0.2.1"
derive_builder = "0.9.0"
